1. Метод .of [#70623 #348075]